--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "firebase": "^10.0.0",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
+    "react-map-gl": "^7.1.3",
     "react-router-dom": "^6.14.2",
     "zustand": "^4.3.9"
   },
